[gd_scene load_steps=10 format=3 uid="uid://l1p68fo1btqa"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_300a6"]
[ext_resource type="PackedScene" uid="uid://65mebt7mndue" path="res://scenes/MainMenu/options_menu.tscn" id="2_yhiq6"]
[ext_resource type="Texture2D" uid="uid://cowcp3nywhvst" path="res://assets/sprites/intro.png" id="3_vkks0"]
[ext_resource type="Texture2D" uid="uid://c1d3fonavx1td" path="res://assets/sprites/towerOfMelodies.png" id="4_lx1th"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7h01"]
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="Theme" id="Theme_k21cm"]

[sub_resource type="Animation" id="Animation_h5wiu"]
resource_name = "intro"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3937)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 0.594603),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer/AspectRatioContainer/Panel/SplashScreen:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.53333, 6.33333, 8.26667, 9.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer/AspectRatioContainer/Panel/SplashScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0666667, 4.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Main_menu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4md7h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer/AspectRatioContainer/Panel/SplashScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer/AspectRatioContainer/Panel/SplashScreen:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Main_menu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8kn6"]
_data = {
"RESET": SubResource("Animation_4md7h"),
"intro": SubResource("Animation_h5wiu")
}

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_300a6")

[node name="Options_Menu" parent="." instance=ExtResource("2_yhiq6")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 1142.0
offset_bottom = 638.0
mouse_filter = 1

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4608.0
grow_horizontal = 2
texture = ExtResource("3_vkks0")
expand_mode = 5
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="MarginContainer/AspectRatioContainer"]
clip_children = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m7h01")

[node name="SplashScreen" type="TextureRect" parent="MarginContainer/AspectRatioContainer/Panel"]
visible = false
layout_mode = 2
texture = ExtResource("4_lx1th")
stretch_mode = 5

[node name="Main_menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Main_menu"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="Main_menu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Main_menu/VBoxContainer"]
modulate = Color(0.909804, 1, 1, 1)
layout_mode = 2
theme = SubResource("Theme_k21cm")
theme_override_font_sizes/font_size = 60
text = "L'Ôde aux étoiles"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main_menu"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Main_menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 20

[node name="Start_Button" type="Button" parent="Main_menu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "START
"

[node name="Options_Button" type="Button" parent="Main_menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "OPTIONS
"

[node name="Exit_Button" type="Button" parent="Main_menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "EXIT
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background")
libraries = {
"": SubResource("AnimationLibrary_c8kn6")
}

[connection signal="pressed" from="Main_menu/HBoxContainer/VBoxContainer/Start_Button" to="." method="on_start_down"]
[connection signal="pressed" from="Main_menu/HBoxContainer/VBoxContainer/Options_Button" to="." method="on_options_pressed"]
[connection signal="pressed" from="Main_menu/HBoxContainer/VBoxContainer/Exit_Button" to="." method="on_exit_pressed"]
